apply plugin: 'java'
apply plugin: 'application'

version = "0.0.1"
group = "com.xjeffrose"

sourceSets.main.java.srcDirs = ['src']

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.11'
    testCompile "org.mockito:mockito-core:1.+"
}

compileJava {
    sourceCompatibility = 1.8
    targetCompatibility = 1.8
    options.compilerArgs << '-XDignore.symbol.file'
    options.fork = true // may not needed on 1.8
    options.forkOptions.executable = 'javac' // may not needed on 1.8
}

repositories {
    mavenCentral()
    jcenter()
}

 task sourceJar(type: Jar) {
from sourceSets.main.allJava
}


mainClassName = "com.xjeffrose.xio.Main"

applicationDefaultJvmArgs = ["\
-Djava.net.preferIPv4Stack=true \
-XX:+AggressiveOpts \
-XX:+UseParNewGC \
-XX:+UseConcMarkSweepGC \
-XX:+CMSParallelRemarkEnabled \
-XX:+CMSClassUnloadingEnabled \
-XX:ReservedCodeCacheSize=128m \
-XX:MaxPermSize=1024m \
-XX:SurvivorRatio=128 \
-XX:MaxTenuringThreshold=0 \
-Xss8M \
-Xms512M \
-Xmx2G \
-server \
" ]

// task(runApp, dependsOn: 'classes', type: JavaExec) {
//     main = 'com.xjeffrose.xio.Main'
//     classpath = sourceSets.main.runtimeClasspath
// }

test {
    maxParallelForks = 5
    maxHeapSize = '1024m'
}

task copyToLib(type: Copy) {
    into "lib"
    from configurations.runtime
}
